build: secp256k1 native library (#639)
Signed-off-by: Anthony Petrov <anthony@swirldslabs.com>